--- a/waterloo-bank/app/build.gradle
+++ b/waterloo-bank/app/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "uk.co.waterloobank"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "4.4.0"
     }
@@ -16,17 +18,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 
 }
 
 repositories {
-    maven { url 'https://raw.githubusercontent.com/iProov/android/master/maven/' }
+//    maven { url 'https://raw.githubusercontent.com/iProov/android/master/maven/' }
+    mavenCentral()
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation('com.iproov.sdk:iproov:4.4.0@aar') {
-        transitive = true
-    }
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.40"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+//    implementation('com.iproov.sdk:iproov:4.4.0@aar') {
+//        transitive = true
+//    }
+    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
