--- a/waterloo-bank/app/build.gradle
+++ b/waterloo-bank/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "uk.co.waterloobank"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "4.4.0"
@@ -28,6 +28,17 @@ android {
 
 repositories {
 //    maven { url 'https://raw.githubusercontent.com/iProov/android/master/maven/' }
+    maven {
+        credentials(HttpHeaderCredentials.class) {
+            name "Authorization"
+            value "Bearer $GITHUB_BEARER_ACCESS_TOKEN"
+
+            authentication {
+                register("header", HttpHeaderAuthentication.class)
+                url "https://raw.githubusercontent.com/iProov/maven-repo/master/maven/"
+            }
+        }
+    }
     mavenCentral()
 }
 
@@ -41,4 +52,14 @@ dependencies {
     implementation "androidx.core:core-ktx:1.0.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'com.iproov.android-api-client:kotlin-fuel:0.5.0-beta'
+    implementation 'com.iproov.android-api-client:kotlin-common:0.5.0-beta'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.2.1"
+
+
+
 }
