--- a/waterloo-bank/app/build.gradle
+++ b/waterloo-bank/app/build.gradle
@@ -53,8 +53,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.iproov.android-api-client:kotlin-fuel:0.5.0-beta'
-    implementation 'com.iproov.android-api-client:kotlin-common:0.5.0-beta'
+    implementation 'com.iproov.android-api-client:kotlin-fuel:0.7.0-beta'
+    implementation 'com.iproov.android-api-client:java-retrofit:0.7.0-beta'
+    implementation 'com.iproov.android-api-client:kotlin-common:0.7.0-beta'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
