Correct version for release

--- a/waterloo-bank/.gitignore
+++ b/waterloo-bank/.gitignore
@@ -57,5 +57,6 @@ captures/
 
 .idea/markdown-navigator/*.*
 .idea/markdown-navigator.xml
+.idea/markdown-exported-files.xml
 .idea/inspectionProfiles
 .idea/codeStyles
