--- a/waterloo-bank/app/build.gradle
+++ b/waterloo-bank/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "5.0.0"
+        versionName "5.0.0-beta1"
     }
     buildTypes {
         release {
@@ -18,12 +18,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildToolsVersion = '28.0.3'
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
-
-
 }
 
 repositories {
