--- a/example-app/app/build.gradle
+++ b/example-app/app/build.gradle
@@ -1,10 +1,12 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
-ext.iproovSdkVersion = "7.0.3"
+ext.iproovSdkVersion = "7.1.0"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     buildFeatures {
         viewBinding true
@@ -13,23 +15,32 @@ android {
     defaultConfig {
         applicationId "com.iproov.example"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName '1.0.0'
     }
 
     buildTypes {
+        debug {
+        }
+        integration {
+            debuggable true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
-    buildToolsVersion = '29.0.2'
+    kotlinOptions {
+        jvmTarget = "1.8"
+        languageVersion = "1.5"
+        apiVersion = "1.5"
+    }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility "1.8"
+        targetCompatibility "1.8"
     }
 
     flavorDimensions "lang"
@@ -53,9 +64,8 @@ configurations.all {
 apply from: '../iProovDependency.gradle'
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.32"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
     implementation iproovDep()
 
@@ -64,7 +74,7 @@ dependencies {
 
     javalangImplementation group: "com.iproov.android-api-client", name: "java-retrofit", version: "1.3.0"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.2.1"
 }
