--- a/example-app/app/src/javalang/AndroidManifest.xml
+++ b/example-app/app/src/javalang/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".MainActivityJava">
+        <activity
+            android:exported="true"
+            android:name=".MainActivityJava">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
