--- a/example-app/app/src/kotlinlang/AndroidManifest.xml
+++ b/example-app/app/src/kotlinlang/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".MainActivityKotlin">
+        <activity android:name=".MainActivityKotlin"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
