--- a/example-app/app/src/callback/AndroidManifest.xml
+++ b/example-app/app/src/callback/AndroidManifest.xml
@@ -8,9 +8,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity
-            android:exported="true"
-            android:name=".MainActivityJava">
+        <activity android:name=".MainActivityCallback"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
