--- a/example-app/app/src/flows/AndroidManifest.xml
+++ b/example-app/app/src/flows/AndroidManifest.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.iproov.example" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.iproov.example">
 
     <application
         android:allowBackup="true"
@@ -8,7 +6,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".MainActivityKotlin"
+        <activity android:name=".MainActivityFlows"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +14,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
