--- a/example-app/app/build.gradle
+++ b/example-app/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
 }
 
-ext.iproovSdkVersion = "8.0.0-beta"
+ext.iproovSdkVersion = "8.0.0"
 
 android {
     compileSdkVersion 31
