--- a/example-app/app/build.gradle
+++ b/example-app/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
 }
 
-ext.iproovSdkVersion = "8.4.0"
+ext.iproovSdkVersion = "7.5.2"
 
 android {
     compileSdkVersion 31
@@ -43,17 +43,16 @@ android {
         targetCompatibility "1.8"
     }
 
-    flavorDimensions "impl"
+    flavorDimensions "lang"
 
     productFlavors {
-        callback {
-            dimension "impl"
-            applicationIdSuffix ".callback"
+        javalang {
+            dimension "lang"
+            applicationIdSuffix ".java"
         }
-
-        flows {
-            dimension "impl"
-            applicationIdSuffix ".flows"
+        kotlinlang {
+            dimension "lang"
+            applicationIdSuffix ".kotlin"
         }
     }
 }
@@ -70,12 +69,11 @@ dependencies {
 
     implementation iproovDep()
 
-    implementation group: "com.iproov.android-api-client", name: "kotlin-fuel", version: "1.4.1"
-    implementation group: "com.iproov.android-api-client", name: "kotlin-common", version: "1.4.1"
+    kotlinlangImplementation group: "com.iproov.android-api-client", name: "kotlin-fuel", version: "1.4.1"
+    kotlinlangImplementation group: "com.iproov.android-api-client", name: "kotlin-common", version: "1.4.1"
+    javalangImplementation group: "com.iproov.android-api-client", name: "java-retrofit", version: "1.4.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.2.1"
-
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 }
