--- a/example-app/app/src/javalang/AndroidManifest.xml
+++ b/example-app/app/src/javalang/AndroidManifest.xml
@@ -1,4 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.iproov.example">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.iproov.example" >
 
     <application
         android:allowBackup="true"
@@ -6,14 +8,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".MainActivityFlows"
-            android:exported="true">
+        <activity
+            android:exported="true"
+            android:configChanges="uiMode"
+            android:name=".MainActivityJava">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
