--- a/example-app/app/src/flows/AndroidManifest.xml
+++ b/example-app/app/src/flows/AndroidManifest.xml
@@ -1,12 +1,15 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.iproov.example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.iproov.example">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivityFlows"
+        <activity
+            android:name=".MainActivityFlows"
+            android:configChanges="uiMode"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
