--- a/example-app/app/build.gradle
+++ b/example-app/app/build.gradle
@@ -1,21 +1,17 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
 }
 
-ext.iproovSdkVersion = "9.0.0-beta"
+ext.iproovSdkVersion = "9.0.0"
 
 android {
-    compileSdkVersion 31
-
-    buildFeatures {
-        viewBinding true
-    }
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.iproov.example"
-        minSdkVersion 21
-        targetSdkVersion 31
+        minSdk 21
+        targetSdkVersion 34
         versionCode 1
         versionName '1.0.0'
     }
@@ -23,12 +19,10 @@ android {
     buildTypes {
         debug {
         }
-        integration {
-            debuggable true
-        }
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -43,7 +37,11 @@ android {
         targetCompatibility "1.8"
     }
 
-    flavorDimensions "impl"
+    buildFeatures {
+        viewBinding true
+    }
+
+    flavorDimensions = ["impl"]
 
     productFlavors {
         callback {
@@ -58,7 +56,8 @@ android {
     }
 }
 
-configurations.all {
+// This is needed for versions prior to 9.x.x - https://github.com/iProov/android/wiki/Known-Issues
+configurations.configureEach {
     exclude group: 'org.json', module: 'json'
 }
 
@@ -66,15 +65,15 @@ apply from: '../iProovDependency.gradle'
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation iproovDep()
 
-    implementation group: "com.iproov.android-api-client", name: "kotlin-fuel", version: "1.4.1"
-    implementation group: "com.iproov.android-api-client", name: "kotlin-common", version: "1.4.1"
+    implementation group: "com.iproov.android-api-client", name: "kotlin-fuel", version: "2.0.1"
+    implementation group: "com.iproov.android-api-client", name: "kotlin-common", version: "2.0.1"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.2.1"
 
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
